# NN_vis_cpp

./: CMakeLists.txt  hello_world  hello_world.cpp  my_program
include/: Layer.h  Network.h
src/: Layer.cpp  Network.cpp  check_opengl.cpp  main.cpp
